[gd_scene load_steps=7 format=3 uid="uid://bv2bm6rrn6nvr"]

[ext_resource type="Script" path="res://UI/Dialogue/DialogueBox.gd" id="1_fj1x3"]
[ext_resource type="PackedScene" uid="uid://ccny88wondmlf" path="res://Dialogue System/choice_button.tscn" id="2_cxf17"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="3_4v15w"]
[ext_resource type="JSON" path="res://Dialogue System/Dialogue Trees/test_dialogue.json" id="3_dfrok"]
[ext_resource type="Script" path="res://UI/Dialogue/DialogueTextUI.cs" id="5_7omvy"]
[ext_resource type="Script" path="res://UI/Dialogue/DialogBoxCsharpInterface.cs" id="5_60lq6"]

[node name="Dialogue Interface" type="Control" node_paths=PackedStringArray("dtUI")]
custom_minimum_size = Vector2(320, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 269.0
offset_bottom = 38.0
script = ExtResource("5_60lq6")
dtUI = NodePath("Dialogue Box/Choice Container/ScrollContainer/RichTextLabel")

[node name="Dialogue Box" type="Control" parent="." node_paths=PackedStringArray("ez_dialogue", "label", "choice_container")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fj1x3")
ez_dialogue = NodePath("EzDialogue")
label = NodePath("Choice Container/ScrollContainer/RichTextLabel")
choice_container = NodePath("Choice Container")
choice_button_scene = ExtResource("2_cxf17")
dialogue = ExtResource("3_dfrok")

[node name="Choice Container" type="VBoxContainer" parent="Dialogue Box"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
offset_right = 320.0
offset_bottom = 120.0

[node name="ScrollContainer" type="ScrollContainer" parent="Dialogue Box/Choice Container"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue Box/Choice Container/ScrollContainer"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
text = "HELLO"
script = ExtResource("5_7omvy")
minSize = Vector2(320, 25)
maxYSize = 100.0

[node name="EzDialogue" type="Node" parent="Dialogue Box"]
script = ExtResource("3_4v15w")

[connection signal="EndOfDialogueReached" from="Dialogue Box" to="." method="OnEODReached"]
[connection signal="custom_signal_received" from="Dialogue Box/EzDialogue" to="." method="OnDialogueSignalReceived"]
[connection signal="custom_signal_received" from="Dialogue Box/EzDialogue" to="Dialogue Box" method="on_custom_signal_received"]
[connection signal="dialogue_generated" from="Dialogue Box/EzDialogue" to="Dialogue Box" method="on_dialogue_generated"]
